# comments

./: Cargo.toml  README.md  dev-setup.md  package-lock.json  package.json  rocket.config.js
crates/coordinator_zomes/comments/: Cargo.toml
crates/coordinator_zomes/comments/src/: lib.rs  utils.rs
crates/coordinator_zomes/dummy/: Cargo.toml
crates/coordinator_zomes/dummy/src/: lib.rs
crates/coordinator_zomes/profiles/: Cargo.toml
crates/dummy/: Cargo.toml
crates/dummy/src/: lib.rs
crates/integrity_zomes/comments/: Cargo.toml  README.md
crates/integrity_zomes/comments/src/: lib.rs
crates/integrity_zomes/dummy/: Cargo.toml
crates/integrity_zomes/dummy/src/: lib.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: lib.rs
crates/zome/: Cargo.toml
crates/zome/src/: lib.rs
docs/: index.md
docs/_assets/: webmanifest.json
docs/_data/: site.cjs
docs/guides/: index.md
docs/guides/backend/: types.md  zome.md
docs/guides/frontend/: comments-service.md  comments-store.md  elements.md
docs/guides/setting-up/: adding-the-frontend.md  adding-the-zome.md
tests/: package.json
tests/src/: index.ts
ui/: README.md  custom-elements.json  package.json
ui/demo/: index.html
ui/src/: comments-service.ts  comments-store.ts  config.ts  context.ts  index.ts  mocks.ts  types.ts
ui/src/definitions/: comment-thread.ts
ui/src/elements/: comment-thread.ts
ui/test/: elements.test.js
ui/test/mocks/: comments.mock.js  index.js
workdir/dna/: dna.yaml
workdir/happ/: happ.yaml
