[package]
authors = ["guillem.cordoba@gmail.com"]
description = "Dummy"
documentation = "https://holochain-open-dev.github.io/comments"
edition = "2018"
homepage = "https://docs.rs/hc_zome_comments"
license = "MIT"
name = "dummy"
repository = "https://github.com/holochain-open-dev/comments"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "dummy"

[dependencies]
derive_more = "0"
serde = "1"

hdk = {version = "0.0.122", features = ["encoding"]}
